// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly 1`] = `
<div
  class="flex flex-col flex-grow h-full"
>
  <header
    class="text-gray-900 bg-white"
  >
    <div
      class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
    >
      <h1
        class="text-3xl font-bold leading-tight font-heading"
      >
        
          Import MapRun Results
        
      </h1>
    </div>
  </header>
   
  <main
    class="flex flex-col flex-grow"
  >
    <!---->
     
    <!---->
     
    <div
      class="flex-grow bg-white"
    >
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
      >
        <div
          class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
        >
          <vue-headful-stub
            description="Import results from MapRun to to Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
            head="[object Object]"
            title="Munro - Import MapRun Results"
            url="https://munro-leagues.herokuapp.com/upload/maprun"
          />
           
          <div
            class="col-span-2"
          >
            <div>
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Event ID:"
              >
                
    Event ID:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="Event ID:"
                type="text"
              />
            </div>
             
            <p
              class="mt-4 mb-4"
              style="display: none;"
            >
              <b
                class="mr-2 text-main-800"
              >
                Event Name:
              </b>
              
      
    
            </p>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Upload Key:"
              >
                
    Upload Key:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="Upload Key:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="MapRun Event Id:"
              >
                
    MapRun Event Id:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="MapRun Event Id:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Course:"
              >
                
    Course:
  
              </label>
               
              <div
                class="relative"
              >
                <span
                  class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                >
                  <svg
                    class="w-5 h-5 text-gray-400"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 9l-7 7-7-7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                 
                <select
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Course:"
                >
                  <option />
                   
                </select>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </main>
   
  <!---->
</div>
`;

exports[`Upload Buttons Shows Correctly 1`] = `
<div
  class="flex flex-col flex-grow h-full"
>
  <header
    class="text-gray-900 bg-white"
  >
    <div
      class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
    >
      <h1
        class="text-3xl font-bold leading-tight font-heading"
      >
        
          Import MapRun Results
        
      </h1>
    </div>
  </header>
   
  <main
    class="flex flex-col flex-grow"
  >
    <!---->
     
    <!---->
     
    <div
      class="flex-grow bg-white"
    >
      <div
        class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
      >
        <div
          class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
        >
          <vue-headful-stub
            description="Import results from MapRun to to Munro - League Results. Sorted. Sports League Results Calculated Quick and Easily, with Results Sorting and Filtering Options"
            head="[object Object]"
            title="Munro - Import MapRun Results"
            url="https://munro-leagues.herokuapp.com/upload/maprun"
          />
           
          <div
            class="col-span-2"
          >
            <div>
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Event ID:"
              >
                
    Event ID:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="Event ID:"
                type="text"
              />
            </div>
             
            <p
              class="mt-4 mb-4"
              style="display: none;"
            >
              <b
                class="mr-2 text-main-800"
              >
                Event Name:
              </b>
              
      
    
            </p>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Upload Key:"
              >
                
    Upload Key:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="Upload Key:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="MapRun Event Id:"
              >
                
    MapRun Event Id:
  
              </label>
               
              <input
                class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                id="MapRun Event Id:"
                type="text"
              />
            </div>
             
            <div
              class="mt-4"
            >
              <label
                class="block pb-1 select-none font-heading text-gray-600"
                for="Course:"
              >
                
    Course:
  
              </label>
               
              <div
                class="relative"
              >
                <span
                  class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                >
                  <svg
                    class="w-5 h-5 text-gray-400"
                    fill="none"
                    stroke="currentColor"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 9l-7 7-7-7"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                </span>
                 
                <select
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Course:"
                >
                  <option />
                   
                </select>
              </div>
            </div>
             
            <button
              class="mt-6 button-lg"
            >
              
      Import Data
    
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
   
  <!---->
</div>
`;
